✨ feat: 新增prisma orm配置

--- a/pages/template.html
+++ b/pages/template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electron Test</title>
+    <title>Electron</title>
     <script>var global = global || window;</script>
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self' 'unsafe-eval'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:" />
